--- a/span-display.html
+++ b/span-display.html
@@ -13,6 +13,7 @@
 
       span {
         /* Prueba los valores inline, block e inline-block para la propiedad display.*/
+        display: inline-block;
         width: 100px;
       }
     </style>
