--- a/linea-bloque.html
+++ b/linea-bloque.html
@@ -1,38 +1,102 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elementos en línea vs en bloque</title>
-    <meta charset="utf-8" />
-    <style>
-      h1,
-      p {
-        border: 1px solid black;
-      }
 
-      a,
-      span {
-        border: 1px solid red;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Lorem ipsum</h1>
-    <p>Lorem ipsum dolor sit amet.</p>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Elementos en línea vs en bloque</title>
+  <meta charset="utf-8" />
+  <style>
+
+    /* Ej. 1*/
+    h1,
+    p {
+      border: 1px solid black;
+      display: inline;
+    }
+
+    a,
+    span {
+      border: 1px solid red;
+      display: block;
+    }
+
+    /* Ej. 2 */
+    textarea {
+      /* display: none;    No se muestra el textarea y no se ve el espacio ocupado. */
+      visibility: hidden; /* No se muestra el textarea pero se ve el espacio ocupado. */
+    }
+
+    /* Ej. 3 */
+
+    .lista p {
+      display: list-item;
+      list-style-position: inside;
+      list-style-type: circle;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Lorem ipsum</h1>
+  <p>Lorem ipsum dolor sit amet.</p>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
+    obcaecati est dolores eos eveniet commodi doloribus voluptas repellat
+    temporibus culpa.
+  </p>
+  <p>Lorem ipsum <span>eveniet</span> sit amet.</p>
+  <a href="#">Lorem ipsum dolor sit amet.</a>
+  <p>Lorem ipsum dolor sit ame<span>Span</span></p>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
+    voluptatum velit minus commodi, impedit at excepturi porro ipsam repellat
+    ex.
+  </p>
+  </br>
+  </br>
+  <hr>
+  <label>
+    Nombre:
+    <input type="text" name="nombre" id="nombre">
+  </label>
+  <label>
+    Apellido:
+    <input type="text" name="apellido" id="apellido">
+  </label>
+  <label for="selector">
+    Selector:
+    <select name="selector" id="selector">
+      <option value="1">Opción 1</option>
+      <option value="2">Opción 2</option>
+      <option value="3">Opción 3</option>
+    </select>
+  </label>
+  </br>
+  </br>
+  <textarea name="texto" id="texto" cols="30" rows="10"></textarea>
+  </br>
+  </br>
+  <button type="submit">Enviar</button>
+
+  <div class="lista">
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
-      obcaecati est dolores eos eveniet commodi doloribus voluptas repellat
-      temporibus culpa.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis provident quidem ipsum quasi ut vel tempore iste neque minus ipsa officia deserunt, dolor repudiandae laborum dolore ullam? Illo, labore doloremque.
     </p>
-    <p>Lorem ipsum <span>eveniet</span> sit amet.</p>
-    <a href="#">Lorem ipsum dolor sit amet.</a>
-    <p>Lorem ipsum dolor sit ame<span>Span</span></p>
+
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
-      voluptatum velit minus commodi, impedit at excepturi porro ipsam repellat
-      ex.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis provident quidem ipsum quasi ut vel tempore iste neque minus ipsa officia deserunt, dolor repudiandae laborum dolore ullam? Illo, labore doloremque.
     </p>
-  </body>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis provident quidem ipsum quasi ut vel tempore iste neque minus ipsa officia deserunt, dolor repudiandae laborum dolore ullam? Illo, labore doloremque.
+    </p>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis provident quidem ipsum quasi ut vel tempore iste neque minus ipsa officia deserunt, dolor repudiandae laborum dolore ullam? Illo, labore doloremque.
+    </p>
+  </div>
+</body>
+
 </html>
