--- a/float-clear.html
+++ b/float-clear.html
@@ -8,6 +8,57 @@
   <title>Float y Clear</title>
   <meta charset="utf-8" />
 
+  <style>
+    .naranja {
+      background-color: orange;
+      width: 200px;
+    }
+
+    .rojo {
+      background-color: red;
+      width: 200px;
+    }
+
+    .verde {
+      background-color: green;
+    }
+
+    #wrapper-left .naranja {
+      float: left;
+    }
+
+    #wrapper-left .rojo {
+      float: left;
+    }
+
+    #wrapper-left .verde {
+      clear: left;
+    }
+
+    #wrapper-right .naranja {
+      float: right;
+    }
+
+    #wrapper-right .rojo {
+      float: right;
+    }
+
+    #wrapper-right .verde {
+      clear: right;
+    }
+
+    #wrapper-both .naranja {
+      float: left;
+    }
+
+    #wrapper-both .rojo {
+      float: right;
+    }
+
+    #wrapper-both .verde {
+      clear: both;
+    }
+  </style>
 </head>
 
 <body>
